--- a/styles/landing.css
+++ b/styles/landing.css
@@ -151,3 +151,27 @@ section input[type="email"] section input[type="text"], section textarea{
     border: none;
 
 }
+
+/* footer styles */
+
+.logo-title{
+    font-size: 100px;
+    font-weight: bold;
+    color: #4E47FF;
+    margin-bottom: 50px;
+}
+.logo-description{
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 30px;
+    
+}
+.logo{
+    text-align: center;
+    
+}
+.logo-item{
+    display: flex;
+    justify-content: space-around;
+
+}
